Replace `2nd` to `2018`

--- a/book.tex
+++ b/book.tex
@@ -79,7 +79,7 @@
   bookmarkstype=toc,
   bookmarksopen=true,
   pdfauthor={Yuu YOSHIMURA},
-  pdftitle={The Rust Programming Language: 2nd Edition}]{hyperref}
+  pdftitle={The Rust Programming Language: 2018 Edition}]{hyperref}
 
 \usepackage{xcolor}
 \usepackage{fancyvrb}
