--- a/book.tex
+++ b/book.tex
@@ -89,7 +89,8 @@
 
 \input{listings.tex}
 
-\usepackage{longtable,booktabs}
+\usepackage{longtable,booktabs,array}
+\usepackage{calc}
 \usepackage{graphicx,grffile}
 
 \usepackage[some]{background}
