Replace `docker-compose` with `docker compose`

--- a/book.tex
+++ b/book.tex
@@ -1,6 +1,7 @@
 \documentclass[10pt, a4paper, oneside]{ltjsbook}
 \usepackage{amssymb,amsmath}
 \usepackage{luatexja-fontspec}
+\usepackage{letltxmacro}
 \usepackage[Lenny]{fncychap}
 
 % チャプターマークの設定
